# connect4

./: CMakeLists.txt  README.md  connect4.c  consts.h  grid.c  grid.h  main.c
cmake/: AddGoogleTest.cmake
common/: consts.h
grid/: CMakeLists.txt  Connect4Grid.c  Connect4Grid.h
tests/: CMakeLists.txt  test_connect4Grid.cpp
